--- a/sps_main.lfm
+++ b/sps_main.lfm
@@ -1,7 +1,7 @@
 object Sps_Editor: TSps_Editor
-  Left = 173
+  Left = 241
   Height = 594
-  Top = 161
+  Top = 209
   Width = 976
   BorderStyle = bsToolWindow
   ClientHeight = 574
@@ -20,6 +20,7 @@ object Sps_Editor: TSps_Editor
     ClientHeight = 516
     ClientWidth = 724
     TabOrder = 0
+    OnMouseDown = ScrollBox1MouseDown
     object MapRender: TPaintBox
       Left = 0
       Height = 105
@@ -223,7 +224,7 @@ object Sps_Editor: TSps_Editor
     end
   end
   object MainMenu1: TMainMenu
-    left = 816
+    left = 824
     object MenuItem1: TMenuItem
       Caption = 'Map'
       object MenuItem2: TMenuItem
@@ -260,6 +261,10 @@ object Sps_Editor: TSps_Editor
         Caption = 'Load path'
         OnClick = ToolButton11Click
       end
+    end
+    object MenuItem13: TMenuItem
+      Caption = 'Go to area:'
+      Visible = False
     end
   end
   object odlg: TOpenDialog
